# ZenboNurseHelper

./: README.md
Android/: .gitignore  README.md  build.gradle  settings.gradle
Android/app/: CMakeLists.txt  build.gradle
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/java/tw/edu/cgu/ai/zenbo/: ActionRunnable.java  (+12 more)
Android/app/src/main/jni/: imageutils_jni.cc  rgb2yuv.cc  rgb2yuv.h  yuv2rgb.cc  yuv2rgb.h
Android/app/src/main/proto/: ServerSend.proto
Android/app/src/main/res/layout/: main_activity.xml  main_activity_redminote8t.xml
Android/app/src/main/res/values/: strings.xml
Android/gradle/caches/8.5/scripts/2w8jrxd27m3s01jxs2ni3ztlm/: cache.properties
Android/gradle/caches/8.5/scripts/35sbwqiqruzo0quhh7wx5hhwm/: cache.properties
Android/gradle/caches/8.5/scripts/493y5nsmmuopm9dy6engbsiyr/: cache.properties
Android/gradle/caches/8.5/scripts/61dfkd7badlaugkky0osbrz0v/: cache.properties
Android/gradle/caches/8.5/scripts/6j3utxkkwxzst06accgmae2qo/: cache.properties
Android/gradle/caches/8.5/scripts/7rqktk22ruyl9d5vts5jfpz13/: cache.properties
Android/gradle/caches/8.5/scripts/9iqpxv9b7nxzipjtggldxckso/: cache.properties
Android/gradle/caches/8.5/scripts/9iv6xoesdio449qqpcs4axd7s/: cache.properties
Android/gradle/caches/8.5/scripts/9zzx9mcxqwslyb33xfbfy082n/: cache.properties
Android/gradle/caches/8.5/scripts/a710am081g2evlghcrc640z4l/: cache.properties
Android/gradle/caches/8.5/scripts/abmiaon7wv3eirtp0lcbs2yq1/: cache.properties
Android/gradle/caches/8.5/scripts/adv92z86oflxcyza0sb7vsyik/: cache.properties
Android/gradle/caches/8.5/scripts/ancp3a1b8rmp834s205iosbf7/: cache.properties
Android/gradle/caches/8.5/scripts/bearz638fd9j4o09h05rylw6d/: cache.properties
Android/gradle/caches/8.5/scripts/c4kyz7xxwqumn4xtypumszzgp/: cache.properties
Android/gradle/caches/8.5/scripts/cwmcwyebr43bufy067tyop1yu/: cache.properties
Android/gradle/caches/8.5/scripts/u5oh0tyqaw662yzoi7k82yv6/: cache.properties
Android/gradle/caches/journal-1/: file-access.properties
Android/gradle/caches/modules-2/files-2.1/androidx.databinding/databinding-common/8.5.0/7097b838228c32ccffaa1c2232d938d3824bee84/: databinding-common-8.5.0.pom
Android/gradle/caches/modules-2/files-2.1/androidx.databinding/databinding-compiler-common/8.5.0/70bdf81b187a27f50f9c8d95a29a4fe4a9ab16e7/: databinding-compiler-common-8.5.0.pom
Android/gradle/caches/modules-2/files-2.1/com.android.databinding/baseLibrary/8.5.0/15504f92f47017a64e1d701ad6f7ddb42c3db88c/: baseLibrary-8.5.0.pom
Android/gradle/caches/modules-2/files-2.1/com.android.tools.analytics-library/crash/31.5.0/5b46099309bf86d33bf9dae518d7c87d4317e804/: crash-31.5.0.pom
Android/gradle/caches/modules-2/files-2.1/com.android.tools.analytics-library/protos/31.5.0/9361fc7a99931074ab3e0c859eacaddd959769c5/: protos-31.5.0.pom
Android/gradle/caches/modules-2/files-2.1/com.android.tools.analytics-library/shared/31.5.0/48c77967bac48718fd10634cf06bf596faf0f379/: shared-31.5.0.pom
Android/gradle/caches/modules-2/files-2.1/com.android.tools.analytics-library/tracker/31.5.0/669a4ec5cff19b2da801609dfcc74e45f3380759/: tracker-31.5.0.pom
Android/gradle/caches/modules-2/files-2.1/com.android.tools.build/aapt2-proto/8.5.0-11315950/2863dc0f8aae0fe3ddebd439c21eae5fb48439b7/: aapt2-proto-8.5.0-11315950.pom
Android/gradle/caches/modules-2/files-2.1/com.android.tools.build/aapt2-proto/8.5.0-11315950/432f7a5f5e2e1d0c84f3e4056c829bcd8ac95601/: aapt2-proto-8.5.0-11315950.module
Android/gradle/caches/modules-2/files-2.1/com.android.tools.build/aaptcompiler/8.5.0/49752748de3f634505d1a0d26f06ffb6f88ab1ce/: aaptcompiler-8.5.0.pom
Android/gradle/caches/modules-2/files-2.1/com.android.tools.build/aaptcompiler/8.5.0/d967366e17a219ac8fb3b8f426fa4552b5cf3f5e/: aaptcompiler-8.5.0.module
Android/gradle/caches/modules-2/files-2.1/com.android.tools.build/apksig/8.5.0/6ee6f282eff916d0a1f9343e78fc9d859f4d4c21/: apksig-8.5.0.pom
Android/gradle/caches/modules-2/files-2.1/com.android.tools.build/apkzlib/8.5.0/3ae5dad1ba7ef1c230de6efa23722396c2ada339/: apkzlib-8.5.0.pom
Android/gradle/caches/modules-2/files-2.1/com.android.tools.build/builder-model/8.5.0/244c41451f8ca1aa5acc1fbf4f1c558ec8a86b68/: builder-model-8.5.0.module
Android/gradle/caches/modules-2/files-2.1/com.android.tools.build/builder-model/8.5.0/ce5f92dd9716ef8c5f435ea54831a992771e0f55/: builder-model-8.5.0.pom
Android/gradle/caches/modules-2/files-2.1/com.android.tools.build/builder-test-api/8.5.0/d040dfcdc7697d0c332cac012cb585553807e6ac/: builder-test-api-8.5.0.module
Android/gradle/wrapper/: gradle-wrapper.properties
Document/: README.md
Python/: README.md
cpp/: .gitignore  CMakeLists.txt  ProcessAudioThread.cpp  ProcessAudioThread.hpp  ProcessImageThread.cpp  ProcessImageThread.hpp  README.md  SendCommandThread.cpp  SendCommandThread.hpp  Sentence.txt  ServerSend.proto  build_demo.sh  human_pose_estimator.cpp  human_pose_estimator.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  run_server_side_program.sh  utility_TimeRecorder.hpp
(+30 files in other folders)
